resolved some conflicts
Co-authored-by: Copilot <copilot@github.com>